--- a/static/css/footer.less
+++ b/static/css/footer.less
@@ -7,6 +7,7 @@
     .fcol();
     .space-between();
     transition: transform @btrans;
+    width: @wktuhack;
 }
 
 .foot-bg {
@@ -14,7 +15,7 @@
     background: -moz-@lpgrad;
     background: -webkit-@lpgrad;
     background: @lpgrad;
-    width: @wfluid;
+    width: 100%;
     height: @hfluid - 95;
     order: 3;
 }
